[project]
name = "void-halo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "jmcomic>=2.6.10",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "standard-imghdr>=3.13.0",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

